[gd_scene load_steps=5 format=3 uid="uid://bmmoer40phkvh"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_awbst"]
[ext_resource type="Script" path="res://scripts/buttons_container.gd" id="2_jtijf"]

[sub_resource type="InputEventAction" id="InputEventAction_2ntuw"]
action = &"accept"

[sub_resource type="Shortcut" id="Shortcut_dvt5d"]
events = [SubResource("InputEventAction_2ntuw")]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_awbst")

[node name="InfoLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 130.0
offset_right = 20.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 72
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeftScoreLabel" type="Label" parent="."]
offset_left = 200.0
offset_top = 125.0
offset_right = 240.0
offset_bottom = 174.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightScoreLabel" type="Label" parent="."]
offset_left = 1080.0
offset_top = 125.0
offset_right = 1120.0
offset_bottom = 174.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartTextTimer" type="Timer" parent="."]
one_shot = true

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.5
offset_top = -25.0
offset_right = 101.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_jtijf")

[node name="ResetButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_dvt5d")
text = "Play again"

[node name="QuitButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Quit to menu"

[connection signal="timeout" from="StartTextTimer" to="." method="_on_start_text_timer_timeout"]
[connection signal="quit_actioned" from="ButtonsContainer" to="." method="_on_quit_actioned"]
[connection signal="reset_actioned" from="ButtonsContainer" to="." method="_on_reset_actioned"]
[connection signal="pressed" from="ButtonsContainer/ResetButton" to="ButtonsContainer" method="_on_reset_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/QuitButton" to="ButtonsContainer" method="_on_quit_button_pressed"]
